Add new interfaces and XML configurations for enhanced element handling